# portfolio-analyzer

./: .replit  app.py  currency_converter.py  pyproject.toml  readme.md  replit.md  requirements.txt  stock_split_handler.py  stock_splits.csv  xirr_analysis.py
attached_assets/: Stock_trading_2023_1753183230959.csv  Stock_trading_2024_1753183230960.csv  Stock_trading_2025_1753183230961.csv
